DOMjudge Programming Contest Judging System

Version 1.4.0 - SVN
-------------------
 - [INCOMPATIBLE CHANGE] Renamed judger to judgehost everywhere to
   remove ambiguity between human judges and judge computers.
 - Add numbering to scoreboard.
 - Make all cells in jury scoreboard links that refer to relevant
   data for that cell (Closes: #1582358).
 - Add affiliation icons to scoreboard (configurable). (Closes: #1355814).
 - Adapt and split sql script files to allow for easier upgrading and
   changing database name.
 - Fix possible buffer overflow in submitcommon.cc; Thanks to
   Lennert Buytenhek for pointing out.
 - Add option to commandline submit to use websubmit (Closes: #1582376).
 - Add unfreezetime field to contests which allows to display the final
   standings to teams and public, and a button to unfreeze right away
   (Closes: #1582370).
 - Add problem and team category colours to MySQL DB.
 - Add team summary to all main team pages.
 - Add check_float program to compare floating point output.
 - Parse validator XML output if xsltproc is available (Closes: #1238454).
 - Add more summary data to tables.
 - Fix clarification wrapping.
 - Fix some language typos.
 - Improve webinterface layout (CSS modifications)
 - Tweak the webinterface even more.

Version 1.3.0 - 6 October 2006
------------------------------
 - Fix balloons notification for new database layout introduced
   in 1.1.0; thanks Lennert Buytenhek for the patch.
 - Handle unwritable logfiles more gracefully.
 - When scoreboard frozen, display since when.
 - Some very minor tweaks to code and documentation.

Version 1.3.0 Release Candidate 2 - 18 September 2006
-----------------------------------------------------
 - Large update and improvement of the documentation: more
   installation information, a quick-install checklist, FAQ
   is improved, example Apache configuration shipped and bugs
   fixed (Closes: #1560107).
 - Default hostname in MySQL privileges to '%' (all hosts), making